--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3978
 PA_FLOW_ENDPOINT=https://prod-XX.westus.logic.azure.com/.../invoke
-MicrosoftAppId=
-MicrosoftAppPassword=
+MicrosoftAppId=728eff07-48f5-431b-9723-f22d0276705f
+MicrosoftAppPassword=u628Q~Mzp~LRKVsBfWs3NK8~whW12_~jCwDYOaJa
+# Updated on 04/23/2025 23:53:31
