Remove secrets from repository

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3978
 PA_FLOW_ENDPOINT=https://prod-XX.westus.logic.azure.com/.../invoke
 MicrosoftAppId=728eff07-48f5-431b-9723-f22d0276705f
-MicrosoftAppPassword=u628Q~Mzp~LRKVsBfWs3NK8~whW12_~jCwDYOaJa
+MicrosoftAppPassword=
 # Updated on 04/23/2025 23:53:31
